Fixed EmailInput, emails not showing up. Cleaned App by adding a separate onLoad function.

--- a/src/components/ProfilePage/Biography/Biography.module.css
+++ b/src/components/ProfilePage/Biography/Biography.module.css
@@ -95,7 +95,9 @@
   color: #ffffff;
 }
 
-.blankEmail:hover {
+.blankEmail:hover,
+.blankEmail:focus,
+.blankEmail:active {
   color: #007bff;
   background-color: #007bff;
 }
